# GFDL_atmos_cubed_sphere

./: CMakeLists.txt
geos_utils/: fv_regrid_c2c.F90  fv_regridding_utils.F90  rs_scaleMod.F90
model/: fv_control.F90  fv_dynamics.F90  fv_mapz.F90  fv_tracer2d.F90  lin_cloud_microphys.F90
model/mapz-driver/: CMakeLists.txt  input.f90  input_types.f90  main.F90  setenv.sh
model/mapz-driver/cmake/: FindBaselibs.cmake  gfdl-fms.cmake
model/mapz-driver/input/: input_array_extents.f90  input_arrays.f90  input_domain_layout.f90  input_flagstruct.f90  input_gridstruct.f90  input_scalars.f90
model/mapz-driver/output/: output.f90
model/mapz-driver/stubs/: external_ic_stub.F90  fv_grid_utils_stub.f90
model/tp-core-driver/: CMakeLists.txt  driver_cpu.f90  main.f90  test.F90
model/tp-core-driver/input/: input_arrays.f90
model/tp-core-driver/output/: output_arrays.f90
model/tp-core-driver/stubs/: fv_arrays_stub.F90  fv_arrays_stub.F90.orig  fv_grid_utils_stub.F90  fv_mp_mod_stub.F90
tools/: external_ic.F90  fv_treat_da_inc.F90  init_hydro.F90
